Adding the how to use section

--- a/index.html
+++ b/index.html
@@ -249,54 +249,33 @@
       </div>
 
     </div>
-    <div id="sec-4" class="section">
-      <div id="mask"></div>
-      <h1 class="how-to-use">how to use</h1>
-      <div class="carousel container">
-        <div class="row">
-          <div class="question">
-            <div class="one"></div>
-            <div class="avatar col-5">
-
-              <img width="150" height="150" src="https://i.pravatar.cc/300" class="rounded-circle " alt="">
-            </div>
-            <div class="message col-2">1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore doloribus,
-            </div>
-          </div>
-
+    <div id="sec-4" class="section container-fluid">
+ 
+      <h1 class="how-to-use">How to use</h1>
+        <div class="frames">
+          <img class="flwres-frame" src="./images/how-to-use/Flowers.png" alt="">
+          <img class="girl-frame" src="./images/how-to-use/Girl.png" alt="">
+          <img class="frame-top" src="./images/how-to-use/Frame.png" alt="">
         </div>
-        <div class="row">
-          <div class="question">
-            <div class="one"></div>
-            <div class="avatar col-5">
-
-              <img width="150" height="150" src="https://i.pravatar.cc/300" class=" rounded-circle " alt="">
-            </div>
-            <div class="message col-2">2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore doloribus,
-            </div>
+        <div class="how-to-use-messages">
+          <div class="step-1">
+            <h3 class="steps-title">Step 1</h3>
+            <p class="steps-des">For day & night. Scoop the jelly with the spatula provided, and place it onto your palm. Then spread evenly across your cleansed face.</p>
           </div>
-
-        </div>
-        <div class="row">
-          <div class="question">
-            <div class="one"></div>
-            <div class="avatar col-5">
-
-              <img width="150" height="150" src="https://i.pravatar.cc/300" class=" rounded-circle " alt="">
-            </div>
-            <div class="message col-2">3 Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore doloribus,
-            </div>
+          <div class="step-2">
+            <h3 class="steps-title">Step 2</h3>
+            <p class="steps-des">Press Jelly firmly into skin to ensure absorption. <a href="">Click here to learn more.</a> </p>
           </div>
-
+          <div class="step-3">
+            <h3 class="steps-title">Step 3</h3>
+            <p class="steps-des">Apply lotion immediately after applying the jelly for a moist-up effect..</p>
+          </div>
+          <div class="step-4">
+            <h3 class="steps-title">Step 4  </h3>
+            <p class="steps-des">Follow through with serum and cream for best results.</p>
+          </div>
         </div>
-
-      </div>
-
-
-
-
-
-
+ 
     </div>
   </div>
 
