--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
 
   </section>
   </div>
-  <!-- <div id="preloader">
+  <div id="preloader">
       <div class="container-fluid loader-page-container">
           <div class="row placeholder-row d-flex justify-content-center align-items-center" >
             <div class="col-1">
@@ -456,7 +456,7 @@
       
       </div>
     
-      </div> -->
+      </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
