--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 
   <title>white jelly</title>
 
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
 
     if (screen.width <= 699) {
       document.location = "mobile.html";
     }
 
-  </script>
+  </script> -->
 </head>
 
 <body>
@@ -205,56 +205,36 @@
         </div>
       </div>
 
-      <!--        
-                <img class="coverup"   src="up.png" alt="">
-                <img class="bottel"   src="https://www.kiehls.com/on/demandware.static/-/Sites-kiehls-master-catalog/default/dw03ff7c5f/nextgen/skin-care/face-moisturizers/ultra-facial/ultra-facial-oil-free-gel-cream/kiehls-face-cream-ultra-facial-oil-free-gel-cream-50ml-000-3605972453211-whip-transparent-background.png" alt="">
-         
-           
-                <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste eligendi ab fugit
-                    sed maxime error eveniet, aut temporibus ut aspernatur, velit sequi impedit hic porro voluptatum
-                    modi ipsa cum ex.</p> -->
-      <!-- <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste eligendi ab fugit sed
-                      maxime error eveniet, aut temporibus ut aspernatur, velit sequi impedit hic porro voluptatum modi
-                      ipsa cum ex.</p>
-                  <p class="p2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste eligendi ab fugit sed
-                      maxime error eveniet, aut temporibus ut aspernatur, velit sequi impedit hic porro voluptatum modi
-                      ipsa cum ex.</p>
-                  <img class="skin-img"
-                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMWps6PFGP26ir9n6wFVLtdgECTdukmc3PsQ&usqp=CAU"
-                      alt="">  -->
-
-
     </section>
     <section> 
       <div id="sec-3" class="">
         <div class="container benifits-container">
-          <div class="row">
-            <div class="col-6 d-flex flex-column justify-content-center  ">
-              <div class=""></div>
+          <div class="row mobile-flex">
+            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center  ">
               <h1 class="benifet-title text-start">A Soft Scent That Whispers</h1>
               <p class="benifet-subtitle text-start">Laced with a delicate blend of Damask rose and Green Floral freshness for a sensual, soft, and subtly sweet scent.</p>
             </div>
-            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-              <img width="400px" src="images/gifs/Icon 1.gif" alt="">
+            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+              <img class="gif-icon" src="images/gifs/Icon 1.gif" alt="">
             </div>
           </div>
-          <div class="row">
-            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-              <img width="400px" src="images/gifs/Icon 2.gif" alt="">
+          <div class="row mobile-flex-md">
+            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+              <img class="gif-icon" src="images/gifs/Icon 2.gif" alt="">
             </div>
-            <div class="col-6 d-flex flex-column justify-content-center align-content-center">
+            <div class="col-lg-6 d-flex flex-column justify-content-center align-content-center">
               <h1 class="benifet-title">Feels Like Your Second Skin</h1>
               <p class="benifet-subtitle">Water-rich jelly texture perfect for the skin to drink up.</p>
   
             </div>
           </div>
-          <div class="row">
-            <div class="col-6 d-flex flex-column justify-content-center   ">
+          <div class="row mobile-flex">
+            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center   ">
               <h1 class="benifet-title text-start">Remodels Itself As It Reveals Your Skin’s Clarity</h1>
               <p class="benifet-subtitle text-start">Restores its own appearance after every use.</p>
             </div>
-            <div class="col-6 d-flex flex-column justify-content-center align-items-center">
-              <img width="400px" src="images/gifs/Icon 3.gif" alt="">
+            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
+              <img class="gif-icon" src="images/gifs/Icon 3.gif" alt="">
             </div>
           </div>
         </div>
@@ -298,7 +278,7 @@
       <div class="container-fluid contact-container ">
         <div class="container">
           <div class="row">
-            <div class="col-4 offset-6 contact-form">
+            <div class="col-lg-4 offset-lg-6 col-sm-12 contact-form">
               <h1 class="jump-start">Jump Start<br> Your Healthy Glow</h1>
               <form id="contact-form" name="myForm" class="form" action="#" onsubmit="return validateForm()"
                 method="POST" role="form">
