--- a/index.html
+++ b/index.html
@@ -380,19 +380,19 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide video-slide">
           <a href="">
-            <img class="" src="./images/Video 1.jpg" alt="">
+            <img class="image-of-vedio" src="./images/Video 1.jpg" alt="">
           </a> 
         </div>
         <div class="swiper-slide"> 
           <a href="">
-            <img class="" src="./images/Video 1.jpg" alt="">
+            <img class="image-of-vedio" src="./images/Video 1.jpg" alt="">
           </a> 
         </div>  
         <div class="swiper-slide">      <a href="">
-          <img class="" src="./images/Video 1.jpg" alt="">
+          <img class="image-of-vedio" src="./images/Video 1.jpg" alt="">
         </a> </div>
         <div class="swiper-slide">    <a href="">
-          <img class="" src="./images/Video 1.jpg" alt="">
+          <img class="image-of-vedio" src="./images/Video 1.jpg" alt="">
         </a> </div>
  
       </div>
@@ -410,8 +410,56 @@
 
 
   </section>
+    <section id="you-may-also">
+      <h1 class="text-center u-may-also-title">You May Also Like</h1>
+      <div class="swiper-container slider2 row">
+        <div class="swiper-wrapper col-md-12">
+            <div class="swiper-slide col-md-4 text-center d-flex flex-column">
+                <img class="other-product"  src="./images/youMayAlso/Astalift Drink Whiteshield.png" alt=""> 
+               
+               <div class="mt-5">
+                 <h4>Astalift Drink Whiteshield</h4>
+                <h6>50ml x 10 btls</h6>
+                <h6>$50.00</h6>
+                <a href="" class="btn buy-now-btn">BUY NOW</a>
+               </div> 
+            </div>
+            <div class="swiper-slide col-md-4 text-center d-flex flex-column">
+              <img class="other-product" src="./images/youMayAlso/D-UV Clear White Solution.png" alt=""> 
+              <div class="mt-5">
+                <h4>Astalift Drink Whiteshield</h4>
+               <h6>50ml x 10 btls</h6>
+               <h6>$50.00</h6>
+               <a href="" class="btn buy-now-btn">BUY NOW</a>
+              </div> 
+          </div>
+          <div class="swiper-slide col-md-4 text-center d-flex flex-column align-items-center">
+            <img class="other-product red-product" src="./images/youMayAlso/Renewal Jelly Aquarysta T.png" alt=""> 
+            <div class="mt-5">
+              <h4>Astalift Drink Whiteshield</h4>
+             <h6>50ml x 10 btls</h6>
+             <h6>$50.00</h6>
+             <a href="" class="btn buy-now-btn">BUY NOW</a>
+            </div> 
+        </div>
+        <div class="swiper-slide col-md-4 text-center d-flex flex-column">
+          <img class="other-product" src="./images/youMayAlso/White Essence Infilt H.png" alt=""> 
+          <div class="mt-5">
+            <h4>Astalift Drink Whiteshield</h4>
+           <h6>50ml x 10 btls</h6>
+           <h6>$50.00</h6>
+           <a href="" class="btn buy-now-btn">BUY NOW</a>
+          </div> 
+      </div>
+        </div>
+        <!-- Add Arrows -->
+        <!-- <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div> -->
+    </div>
+    </section>
   </div>
-  <div id="preloader">
+  <section id="placeholder">
+      <div id="preloader">
       <div class="container-fluid loader-page-container">
           <div class="row placeholder-row d-flex justify-content-center align-items-center" >
             <div class="col-1">
@@ -437,6 +485,8 @@
       </div>
     
       </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
