--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
     </div>
   </section>
   </div>
-  <!-- <section id="placeholder">
+  <section id="placeholder">
       <div id="preloader">
       <div class="container-fluid loader-page-container">
           <div class="row placeholder-row d-flex justify-content-center align-items-center" >
@@ -489,7 +489,7 @@
       </div>
     
       </div>
-  </section> -->
+  </section>
   <section id="faq-section" class="container section-container page-section">
     <h2 class="section-faq-title">FAQs</h2>
     <div class="faq-container" onclick="onClickFAQItem(event)">
