--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link " href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/"
-              tabindex="-1">SHOP NOW </a>
+              tabindex="-1" target="_blank">SHOP NOW </a>
           </li>
         </ul>
       </div>
@@ -111,7 +111,7 @@
             <h1 class="hero-b-title">White Jelly Aquarysta</h1>
             <p class="dis-1">Enriched with a cocktail of glow-inducing ingredients that rejuvenate and moisturise, to
               leave your skin radiant and bouncy to the touch.</p>
-            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" type="button" class="btn btn-danger">SHOP NOW</a>
+            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" type="button" class="btn btn-danger" target="_blank">SHOP NOW</a>
           </div>
           <div class="col-3 offset-1 discription-2-div">
             <h1 class="hero-b-title">Rediscover Your Skin’s Intrinsic Beauty</h1>
@@ -204,7 +204,7 @@
 
           </div>
           <div class="col-12 button-col">
-            <button href="www.google.com" type="button" class="btn btn-danger">SHOP NOW</button>
+            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" type="button" class="btn btn-danger" target="_blank">SHOP NOW</a>
           </div>
         </div>
       </div>
@@ -214,7 +214,7 @@
       <div id="sec-3" class="">
         <div class="container benifits-container">
           <div class="row mobile-flex">
-            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center  ">
+            <div class="col-lg-5 offset-lg-1 col-sm-12 d-flex flex-column justify-content-center  ">
               <h1 class="benifet-title text-start">A Soft Scent That Whispers</h1>
               <p class="benifet-subtitle text-start">Laced with a delicate blend of Damask rose and Green Floral
                 freshness for a sensual, soft, and subtly sweet scent.</p>
@@ -227,14 +227,14 @@
             <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center align-items-center">
               <img class="gif-icon" src="images/gifs/Icon 2.gif" alt="">
             </div>
-            <div class="col-lg-6 d-flex flex-column justify-content-center align-content-center">
+            <div class="col-lg-5 offset-lg-1 d-flex  flex-column justify-content-center align-content-center">
               <h1 class="benifet-title">Feels Like Your Second Skin</h1>
               <p class="benifet-subtitle">Water-rich jelly texture perfect for the skin to drink up.</p>
 
             </div>
           </div>
           <div class="row mobile-flex">
-            <div class="col-lg-6 col-sm-12 d-flex flex-column justify-content-center   ">
+            <div class="col-lg-5 offset-lg-1 col-sm-12 d-flex flex-column justify-content-center   ">
               <h1 class="benifet-title text-start">Remodels Itself As It Reveals Your Skin’s Clarity</h1>
               <p class="benifet-subtitle text-start">Restores its own appearance after every use.</p>
             </div>
@@ -376,11 +376,12 @@
   </div>
 
   </div>
-  <section id="sec-5" class="section d-flex flex-column align-items-center">
+  <section id="sec-5" >
+    <h1 class="text-start they-using-it-title">They’re Using It Too</h1>
     <!-- Swiper -->
-
-
-    <div class="swiper-container mySwiper  ">
+<div class="section d-flex flex-column align-items-center">
+ <div class="swiper-container mySwiper  ">
+ 
       <div class="swiper-wrapper">
         <div class="swiper-slide video-slide">
           <a href="">
@@ -408,6 +409,9 @@
         <img id="prev" class="arrow-pre" src="./images/Arrow_Previous.png" alt="">
       </div>
     </div>
+</div>
+
+   
 
 
 
@@ -425,7 +429,7 @@
             <h4>Astalift Drink Whiteshield</h4>
             <h6>50ml x 10 btls</h6>
             <h6>$50.00</h6>
-            <a href="" class="btn buy-now-btn">BUY NOW</a>
+            <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
@@ -434,7 +438,7 @@
             <h4>Astalift Drink Whiteshield</h4>
             <h6>50ml x 10 btls</h6>
             <h6>$50.00</h6>
-            <a href="" class="btn buy-now-btn">BUY NOW</a>
+            <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column align-items-center">
@@ -443,7 +447,7 @@
             <h4>Astalift Drink Whiteshield</h4>
             <h6>50ml x 10 btls</h6>
             <h6>$50.00</h6>
-            <a href="" class="btn buy-now-btn">BUY NOW</a>
+            <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
@@ -452,7 +456,7 @@
             <h4>Astalift Drink Whiteshield</h4>
             <h6>50ml x 10 btls</h6>
             <h6>$50.00</h6>
-            <a href="" class="btn buy-now-btn">BUY NOW</a>
+            <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
         </div>
       </div>
@@ -570,36 +574,36 @@
         <div class="col-lg-3">
           <div class="d-flex flex-column">
             <h4>FEATURED</h4>
-            <a>Best Seller</a>
-            <a>Shop</a>
-            <a>Makeup</a>
-            <a>Facial</a>
-            <a>Online Promotion</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/best-sellers/' target='_blank'>Best Seller</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/shop/' target='_blank'>Shop</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/product-category/makeup/' target='_blank'>Makeup</a>
+            <a id='footer-a' href='http://astalift.com.sg/facial/' target='_blank'>Facial</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/online-promotions/' target='_blank'>Online Promotion</a>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="d-flex flex-column">
             <h4>ABOUT US</h4>
-            <a>Our Story</a>
-            <a>Contact Us</a>
-            <a>Store Locator</a>
+            <a id='footer-a' href='https://astalift.com.sg/about-astalift/' target='_blank'>Our Story</a>
+            <a id='footer-a' href='https://astalift.com.sg/contact-us/' target='_blank'>Contact Us</a>
+            <a id='footer-a' href='https://astalift.com.sg/contact-us/#store' target='_blank'>Store Locator</a>
 
           </div>
         </div>
         <div class="col-lg-3">
           <div class="d-flex flex-column">
             <h4>INFORMATION</h4>
-            <a>FAQ</a>
-            <a>Shipping & Returns</a>
-            <a>Cookies Policy</a>
-            <a>Privacy Policy</a>
+            <a id='footer-a' href='https://astalift.com.sg/faq/'>FAQ</a>
+            <a id='footer-a' href='https://astalift.com.sg/shipping-returns/' target='_blank'>Shipping & Returns</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/cookie-policy/' target='_blank'>Cookies Policy</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/privacy-policy/' target='_blank'>Privacy Policy</a>
 
           </div>
         </div>
         <div class="col-lg-3">
           <div class="d-flex flex-column">
             <h4>LOYALTY</h4>
-            <span>My Account </span>
+            <a id='footer-a' href='https://www.astalift.com.sg/my-account/' target='_blank'>My Account </a>
             <h4>Subscribe</h4>
             <div id="mc_embed_signup">
               <form
