--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
       </div>
     </section>
-    <section>
+    <section id="how-to-use-section">
       <div id="sec-4" class="section container-fluid">
 
         <h1 class="how-to-use">How To Use</h1>
@@ -420,7 +420,14 @@
   </div>
 
   </div>
+  <div id="video-popup-overlay"></div>
   <section id="sec-5" >
+    <div id="video-popup-container">
+      <div id="video-popup-close" class="fade">&#10006;</div>
+      <div id="video-popup-iframe-container">
+          <iframe id="video-popup-iframe" src="" width="100%" height="100%" frameborder="0"></iframe>
+      </div>
+  </div>
     <h1 class="text-start they-using-it-title">They’re Using It Too</h1>
     <!-- Swiper -->
 <div class="section d-flex flex-column align-items-center">
@@ -429,6 +436,8 @@
       <div class="swiper-wrapper frist-swiper">
        
         <div class="swiper-slide">
+          <div class="vpop" data-type="youtube" data-id="jUpei0Enrds"
+                                                data-autoplay='true'>
           <a href="">
             <img class="image-of-vedio" src="./images/Video 1.jpg" alt="">
           </a>
@@ -706,6 +715,28 @@
   <script src="js/main.js"></script>
 
   <script>
+        $(".vpop").on('click', function (e) {
+            e.preventDefault();
+            $("#video-popup-overlay,#video-popup-iframe-container,#video-popup-container,#video-popup-close").show();
+
+            var srchref = '', autoplay = '', id = $(this).data('id');
+            if ($(this).data('type') == 'vimeo') var srchref = "//player.vimeo.com/video/";
+            else if ($(this).data('type') == 'youtube') var srchref = "https://www.youtube.com/embed/";
+
+            if ($(this).data('autoplay') == true) autoplay = '?autoplay=1';
+
+            $("#video-popup-iframe").attr('src', srchref + id + autoplay);
+
+            $("#video-popup-iframe").on('load', function () {
+                $("#video-popup-container").show();
+            });
+        });
+
+        $("#video-popup-close, #video-popup-overlay").on('click', function (e) {
+            $("#video-popup-iframe-container,#video-popup-container,#video-popup-close,#video-popup-overlay").hide();
+            $("#video-popup-iframe").attr('src', '');
+        });
+
     function onClickFAQItem(e) {
       const item = e.currentTarget;
       const icons = item.querySelector('.fas');
