--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <div class="swiper-wrapper frist-swiper">
        
         <div class="swiper-slide">
-          <div class="vpop" data-type="youtube" data-id="jUpei0Enrds"
+          <div class="vpop" data-type="youtube" data-id=""
                                                 data-autoplay='true'>
           <a href="">
             <img class="image-of-vedio" src="./images/Video 1.jpg" alt="">
