second fedback fixed

--- a/index.html
+++ b/index.html
@@ -167,8 +167,7 @@
     </div>
   </div>
   <div id="main-container">
-    <div class="cursor"></div>
-    <div class="cursor-follower"></div>
+ 
     <section id="sec-2" class="section sticky">
       <div class="container-fluid">
         <div class="row top-flowers">
@@ -187,7 +186,7 @@
           <h5 class="subtitle text-uppercase">The ultimate skin brightening booster</h5>
         </div>
         <div class="scrolling-dot">
-          <img src="./images/Scrolling Dot.gif" alt="">
+          <img width="50px" src="./images/Scrolling Dot.gif" alt="">
           <h3 class="scroll-icon-text w-100 ">Unveil the White Jelly Aquarysta</h3>
           
           
@@ -219,13 +218,13 @@
             <img class="wj-top" src="./images/hearo2/White Jelly Top.png" alt="">
             <img class="wj-bottom" src="./images/hearo2/White Jelly Bottom 1.png" alt="">
           </div>
-          <div class="col-3 offset-1 discription-1-div">
+          <div class="col-4 offset-1 discription-1-div">
             <h1 class="hero-b-title">White Jelly Aquarysta</h1>
-            <p class="dis-1">Enriched with a cocktail of glow-inducing ingredients that rejuvenate and moisturise, to
+            <p class="dis-1 w-75">Enriched with a cocktail of glow-inducing ingredients that rejuvenate and moisturise, to
               leave your skin radiant and bouncy to the touch.</p>
-            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" type="button" class="btn btn-danger" target="_blank">SHOP NOW</a>
+            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" type="button" class="btn btn-danger mt-5" target="_blank">SHOP NOW</a>
           </div>
-          <div class="col-4 offset-1 discription-2-div">
+          <div class=" col-4 offset-1 discription-2-div">
             <h1 class="hero-b-title">Rediscover Your Skin’s Intrinsic Beauty</h1>
             <h5 class="hero-subtitle">White Jelly Aquarysta – an evolution from the iconic Aquarysta line.</h5>
             <br>
@@ -539,36 +538,36 @@
           <img class="other-product" src="./images/youMayAlso/Astalift Drink Whiteshield.png" alt="">
 
           <div class="products-description">
-            <h4>Astalift Drink Whiteshield <br><span style="opacity: 0;">AM</span></h4>
-            <h5>50ml x 10 btls</h5>
-            <h6>$50.00</h6>
+            <h4 class="u-may-text-1">Astalift Drink Whiteshield <br><span style="opacity: 0;">AM</span></h4>
+            <h5 class="u-may-text-2">50ml x 10 btls</h5>
+            <h6 class="u-may-text-3">$50.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
           <img class="other-product" src="./images/youMayAlso/D-UV Clear White Solution.png" alt="">
           <div class="products-description">
-            <h4 class=" text-center">D-UV Clear White Solution<br> SPF50+ PA++++30g</h4>
-            <h5>20g</h5>
-            <h6>$72.00</h6>
+            <h4 class="u-may-text-1 text-center">D-UV Clear White Solution<br> SPF50+ PA++++30g</h4>
+            <h5 class="u-may-text-2">20g</h5>
+            <h6 class="u-may-text-3">$72.00</h6>
             <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column align-items-center">
           <img class="other-product red-product" src="./images/youMayAlso/Renewal Jelly Aquarysta T.png" alt="">
           <div class="products-description">
-            <h4 class="renwal-product">Renewal Jelly Aquarysta T <br><span style="opacity: 0;">AM</span></h4>
-            <h5>40g | 60g | Refil</h5>
-            <h6>$141.00 – $222.00</h6>
+            <h4 class="u-may-text-1 renwal-product">Renewal Jelly Aquarysta T <br><span style="opacity: 0;">AM</span></h4>
+            <h5 class="u-may-text-2">40g | 60g | Refil</h5>
+            <h6 class="u-may-text-3">$141.00 – $222.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
           <img class="other-product" src="./images/youMayAlso/White Essence Infilt H.png" alt="">
           <div class="products-description">
-            <h4>White Essence Infilt H <br><span style="opacity: 0;">AM</span></h4>
-            <h5>30ml (Refill) | 30ml</h5>
-            <h6>$108.00 – $115.00</h6>
+            <h4 class="u-may-text-1">White Essence Infilt H <br><span style="opacity: 0;">AM</span></h4>
+            <h5 class="u-may-text-2">30ml (Refill) | 30ml</h5>
+            <h6 class="u-may-text-3">$108.00 – $115.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
