--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="col-1">
             <img class="placeholder-flower-1" src="images/Flower 1.png" alt="">
           </div>
-          <div class="col-8 mt-4 ">
+          <div class="col-9 mt-4 ">
             <h3 class="placeholder-title-1 text-center">Astalift Presents</h3>
             <h1 class="placeholder-title-2 text-center">White Jelly Aquarysta</h1>
           </div>
@@ -52,7 +52,7 @@
           </div>
           </div>
         </div>
-        <div class="container"> 
+        <div id="loader-container" class="container"> 
                <div class="loader row mt-4">
                  <p class="placeholder-zero">0</p>
         <div class="loader_bar col-5" id="loader_bar"><span class="loader_animate"></span></div>
