--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="slider">
         <div class="slider-header  d-flex align-items-center">
           <i id="slider-close" class="fas fa-times"></i>
-          <a class="navbar-brand" href="#"><img class="" width="200px" src="./images/Astalift logo.png" alt=""></a>
+          <a class="navbar-brand" href="#"><img class="slider-logo" src="./images/Astalift logo.png" alt=""></a>
         </div>
         <ul class="slider-ul">
           <li class="nav-item">
@@ -934,6 +934,7 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <!-- Swiper JS -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  
 
 
 
