--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="col-1">
             <img class="placeholder-flower-1" src="images/Flower 1.png" alt="">
           </div>
-          <div class="col-9 mt-4 ">
+          <div class="col-9 mt-4 placeholder-title-container">
             <h3 class="placeholder-title-1 text-center">Astalift Presents</h3>
             <h1 class="placeholder-title-2 text-center">White Jelly Aquarysta</h1>
           </div>
