--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
           <img class="other-product red-product" src="./images/youMayAlso/Renewal Jelly Aquarysta T.png" alt="">
           <div class="products-description">
             <h4 class="u-may-text-1 renwal-product">Renewal Jelly Aquarysta T <br><span style="opacity: 0;">AM</span></h4>
-            <h5 class="u-may-text-2">40g | 60g | Refil</h5>
+            <h5 class="u-may-text-2">40g | 60g | Refill</h5>
             <h6 class="u-may-text-3">$141.00 – $222.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
