--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
   <link rel="stylesheet" href="css/style.css?v=1.1">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@900&display=swap" rel="stylesheet">
+
   <title>white jelly</title>
 
   <!-- <script type="text/javascript">
