--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     href="https://cdn.jsdelivr.net/gh/kenwheeler/slick@1.8.0/slick/slick-theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-  <link rel="stylesheet" href="css/style.css?v=1.1">
+  <link rel="stylesheet" href="css/style.css?v=2.0">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -1062,7 +1062,7 @@
 
 
 
-  <script src="js/main.js"></script>
+  <script src="js/main.js?v=2.0"></script>
 
   <script>
         $(".vpop").on('click', function (e) {
