--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </section>
   <nav id="desktop-nav" class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="https://astalift.com.sg/" target="_blank"><img class="logo" src="./images/Astalift logo.png" alt=""></a>
+      <a class="navbar-brand" href="https://astalift.com.sg/"><img class="logo" src="./images/Astalift logo.png" alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
