--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
           <img class="other-product" src="./images/youMayAlso/Astalift Drink Whiteshield.png" alt="">
 
           <div class="products-description">
-            <h4 class="u-may-text-1">Astalift Drink Whiteshield <br><span style="opacity: 0;">AM</span></h4>
+            <h4 class="u-may-text-1">Astalift White Shield Drink <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">50ml x 10 btls</h5>
             <h6 class="u-may-text-3">$50.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
@@ -774,8 +774,8 @@
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
           <img class="other-product" src="./images/youMayAlso/D-UV Clear White Solution.png" alt="">
           <div class="products-description">
-            <h4 class="u-may-text-1 text-center">D-UV Clear White Solution<br> SPF50+ PA++++30g</h4>
-            <h5 class="u-may-text-2">20g</h5>
+            <h4 class="u-may-text-1 text-center">D-UV Clear White Solution <br> SPF50+ PA++++</h4>
+            <h5 class="u-may-text-2">30g</h5>
             <h6 class="u-may-text-3">$72.00</h6>
             <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
@@ -783,7 +783,7 @@
         <div class="swiper-slide col-md-4 text-center d-flex flex-column align-items-center">
           <img class="other-product red-product" src="./images/youMayAlso/Renewal Jelly Aquarysta T.png" alt="">
           <div class="products-description">
-            <h4 class="u-may-text-1 renwal-product">Renewal Jelly Aquarysta T <br><span style="opacity: 0;">AM</span>
+            <h4 class="u-may-text-1 renwal-product">Jelly Aquarysta <br><span style="opacity: 0;">AM</span>
             </h4>
             <h5 class="u-may-text-2">40g | 60g | Refill</h5>
             <h6 class="u-may-text-3">$141.00 – $222.00</h6>
@@ -793,7 +793,7 @@
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
           <img class="other-product" src="./images/youMayAlso/White Essence Infilt H.png" alt="">
           <div class="products-description">
-            <h4 class="u-may-text-1">White Essence Infilt H <br><span style="opacity: 0;">AM</span></h4>
+            <h4 class="u-may-text-1">White Essence Infilt <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">30ml (Refill) | 30ml</h5>
             <h6 class="u-may-text-3">$108.00 – $115.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
