--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <img width="100%" src="./images/mobile/06_Flower_Bottle.jpg" alt="">
         <div class="p-5">
           <h1 class="sec-moile-second-title mulish bold">Horse Chestnut Extract</h1>
-          <p class="mulish">Tones, soothes and moisturises skin to give you a dewy glow.</p>
+          <p class="mulish font-23">Tones, soothes and moisturises skin to give you a dewy glow.</p>
           <br>
           <h1 class="sec-moile-second-title bold">Bilberry Leaf Extract</h1>
           <p>Prevents age spots to supply radiance, realigns corneocytes for translucent and clearer skin.</p>
@@ -173,10 +173,10 @@
         <div class="p-5">
 
           <h1 class="sec-moile-second-title bold">Uncaria Gambir Extract</h1>
-          <p>Natural-origin antioxidant that tightens skin and builds ceramides from within.</p>
+          <p class="font-23">Natural-origin antioxidant that tightens skin and builds ceramides from within.</p>
           <br>
           <h1 class="sec-moile-second-title">Nano AMA+</h1>
-          <p>Breaks down melanin production to prevent hyperpigmentation & age spots, inhibits collagen discolouration
+          <p class="font-23">Breaks down melanin production to prevent hyperpigmentation & age spots, inhibits collagen discolouration
             to prevent dulling of skin.</p>
 
         </div>
@@ -451,6 +451,7 @@
           <div class="step-4">
             <h3 class="steps-title">Step 4 </h3>
             <p class="steps-des">Follow through with serum and cream for best results.</p>
+            <a href="" class="btn how-2-use-btn"> SHOP NOW</a>
           </div>
         </div>
 
@@ -790,7 +791,7 @@
           <img class="other-product" src="./images/youMayAlso/White Essence Infilt H.png" alt="">
           <div class="products-description">
             <h4 class="u-may-text-1">White Essence Infilt <br><span style="opacity: 0;">AM</span></h4>
-            <h5 class="u-may-text-2">30ml (Refill) | 30ml</h5>
+            <h5 class="u-may-text-2">30ml | 30ml Refill</h5>
             <h6 class="u-may-text-3">$108.00 – $115.00</h6>
             <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
@@ -887,12 +888,12 @@
             <a id='footer-a' href='https://www.astalift.com.sg/shop/' target='_blank'>Shop</a>
             <a id='footer-a' href='https://www.astalift.com.sg/product-category/makeup/' target='_blank'>Makeup</a>
             <a id='footer-a' href='http://astalift.com.sg/facial/' target='_blank'>Facial</a>
-            <a id='footer-a' href='https://www.astalift.com.sg/online-promotions/' target='_blank'>Online Promotion</a>
+            <a id='footer-a' href='https://www.astalift.com.sg/online-promotions/' target='_blank'>Online Promotions</a>
           </div>
         </div>
         <div class="col-lg-3">
           <div class="d-flex flex-column">
-            <h4>ABOUT US</h4>
+            <h4>ABOUT ASTALIFT</h4>
             <a id='footer-a' href='https://astalift.com.sg/about-astalift/' target='_blank'>Our Story</a>
             <a id='footer-a' href='https://astalift.com.sg/contact-us/' target='_blank'>Contact Us</a>
             <a id='footer-a' href='https://astalift.com.sg/contact-us/#store' target='_blank'>Store Locator</a>
@@ -969,14 +970,14 @@
             <a class="mobile-footer-a">Shop</a>
             <a class="mobile-footer-a">Makeup</a>
             <a class="mobile-footer-a">Facial</a>
-            <a class="mobile-footer-a">Online Promotion</a>
+            <a class="mobile-footer-a">Online Promotions</a>
           </div>
 
         </div>
       </div>
       <div id=" footer-mobile" class="faq-container footer-mobile" onclick="onClickFooterItem(event)">
         <div class="faq-question-container">
-          <h4 class="li-footer-header">ABOUT US</h4>
+          <h4 class="li-footer-header">ABOUT ASTALIFT</h4>
           <i class="fas fa-angle-down "></i>
         </div>
         <div class="faq-answer-container">
