--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
     </div>
     <div class="faq-container" onclick="onClickFAQItem(event)">
       <div class="faq-question-container">
-        <p class="faq-question">Does Aquarysta contain any harsh acids?</p>
+        <p class="faq-question">Does Aquarysta White Jelly contain any harsh acids?</p>
         <i class="fas fa-plus"></i>
       </div>
       <div class="faq-answer-container">
