--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <img width="100%" src="./images/mobile/06_Flower_Bottle.jpg" alt="">
         <div class="p-5">
           <h1 class="sec-moile-second-title mulish bold">Horse Chestnut Extract</h1>
-          <p class="mulish font-23">Tones, soothes and moisturises skin to give you a dewy glow.</p>
+          <p class="mulish ">Tones, soothes and moisturises skin to give you a dewy glow.</p>
           <br>
           <h1 class="sec-moile-second-title bold">Bilberry Leaf Extract</h1>
           <p>Prevents age spots to supply radiance, realigns corneocytes for translucent and clearer skin.</p>
@@ -173,10 +173,10 @@
         <div class="p-5">
 
           <h1 class="sec-moile-second-title bold">Uncaria Gambir Extract</h1>
-          <p class="font-23">Natural-origin antioxidant that tightens skin and builds ceramides from within.</p>
+          <p class="">Natural-origin antioxidant that tightens skin and builds ceramides from within.</p>
           <br>
           <h1 class="sec-moile-second-title">Nano AMA+</h1>
-          <p class="font-23">Breaks down melanin production to prevent hyperpigmentation & age spots, inhibits collagen discolouration
+          <p class="">Breaks down melanin production to prevent hyperpigmentation & age spots, inhibits collagen discolouration
             to prevent dulling of skin.</p>
 
         </div>
@@ -863,7 +863,7 @@
     </div>
     <div class="faq-container" onclick="onClickFAQItem(event)">
       <div class="faq-question-container">
-        <p class="faq-question">Does Aquarysta White Jelly contain any harsh acids?</p>
+        <p class="faq-question">Does White Jelly Aquarysta contain any harsh acids?</p>
         <i class="fas fa-plus"></i>
       </div>
       <div class="faq-answer-container">
