--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
             <h4 class="u-may-text-1">Astalift White Shield Drink <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">50ml x 10 btls</h5>
             <h6 class="u-may-text-3">$50.00</h6>
-            <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/new-astalift-white-shield-drink-50ml-x-10-btls/" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
@@ -774,7 +774,7 @@
             <h4 class="u-may-text-1 text-center">D-UV Clear White Solution <br> SPF50+ PA++++</h4>
             <h5 class="u-may-text-2">30g</h5>
             <h6 class="u-may-text-3">$72.00</h6>
-            <a href="" class="btn buy-now-btn" target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/astalift-d-uv-clear-white-solution/" class="btn buy-now-btn" target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column align-items-center">
@@ -784,7 +784,7 @@
             </h4>
             <h5 class="u-may-text-2">40g | 60g | Refill</h5>
             <h6 class="u-may-text-3">$141.00 – $222.00</h6>
-            <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/renewal-jelly-aquarysta-t/" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
         <div class="swiper-slide col-md-4 text-center d-flex flex-column">
@@ -793,7 +793,7 @@
             <h4 class="u-may-text-1">White Essence Infilt <br><span style="opacity: 0;">AM</span></h4>
             <h5 class="u-may-text-2">30ml | 30ml Refill</h5>
             <h6 class="u-may-text-3">$108.00 – $115.00</h6>
-            <a href="" class="btn buy-now-btn " target="_blank">BUY NOW</a>
+            <a href="https://astalift.com.sg/product/astalift-white-essence-infilt-h/" class="btn buy-now-btn " target="_blank">BUY NOW</a>
           </div>
         </div>
       </div>
