--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
           <div class="step-4">
             <h3 class="steps-title">Step 4 </h3>
             <p class="steps-des">Follow through with serum and cream for best results.</p>
-            <a href="" class="btn how-2-use-btn"> SHOP NOW</a>
+            <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" target="_blank" class="btn how-2-use-btn"> SHOP NOW</a>
           </div>
         </div>
 
