--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@
             <div class="step-4-mobile d-flex flex-column align-items-center">
               <h4 class="step-text-1">Step 4</h4>
               <p class="how-2-use-mobile-d">Follow through with serum and cream for best results.</p>
+              <a href="https://astalift.com.sg/product/white-jelly-aquarysta-40g-60g-refill/" target="_blank" class="btn how-2-use-btn"> SHOP NOW</a>
             </div>
           </div>
         </div>
